RESOLVED FIXED49310
[Qt][WK2] Fix re-use of memory-mapped files
https://bugs.webkit.org/show_bug.cgi?id=49310
Summary [Qt][WK2] Fix re-use of memory-mapped files
Andreas Kling
Reported 2010-11-10 01:31:59 PST
See patch.
Attachments
Proposed patch (5.40 KB, patch)
2010-11-10 01:32 PST, Andreas Kling
no flags
Andreas Kling
Comment 1 2010-11-10 01:32:37 PST
Created attachment 73472 [details] Proposed patch
Kenneth Rohde Christiansen
Comment 2 2010-11-10 01:38:47 PST
Comment on attachment 73472 [details] Proposed patch Consider changing fileName to filePath, I guess that is what it really represents
Kenneth Rohde Christiansen
Comment 3 2010-11-10 01:39:17 PST
Maybe we need a few comments in the code to not cause unneeded regressions.
Andreas Kling
Comment 4 2010-11-10 02:46:44 PST
Comment on attachment 73472 [details] Proposed patch Clearing flags on attachment: 73472 Committed r71729: <http://trac.webkit.org/changeset/71729>
Andreas Kling
Comment 5 2010-11-10 02:46:54 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.